[gd_scene load_steps=18 format=2]

[ext_resource path="res://GFX/form.png" type="Texture" id=1]
[ext_resource path="res://GFX/acceuil.png" type="Texture" id=2]
[ext_resource path="res://GFX/Bouton/bouton_confirmer_pressed.png" type="Texture" id=3]
[ext_resource path="res://GFX/Bouton/bouton_confirmer_normal.png" type="Texture" id=4]
[ext_resource path="res://Fonts/RELLIALE.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scripts/Form.gd" type="Script" id=6]
[ext_resource path="res://GFX/Fonts/RELLIALE.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GFX/Bouton/bouton_retour_normal.png" type="Texture" id=8]
[ext_resource path="res://GFX/Bouton/bouton_retour_pressed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 40
extra_spacing_char = 3
extra_spacing_space = 13
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 5 )

[node name="Form" type="Node2D"]
script = ExtResource( 6 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.1934
margin_top = -10.0962
margin_right = 3826.81
margin_bottom = 2149.9
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="formule" type="TextureRect" parent="."]
margin_left = 1170.0
margin_right = 2670.0
margin_bottom = 2160.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title " type="Label" parent="formule"]
margin_top = 200.0
margin_right = 1500.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 1 )
text = "Inscription"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="emailLabel" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 352.0
margin_right = 317.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 2 )
text = "E-mail :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mail" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 447.0
margin_right = 1375.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usernameLabel" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 567.0
margin_right = 355.0
margin_bottom = 637.0
custom_fonts/font = SubResource( 2 )
text = "Pseudo:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 662.0
margin_right = 1375.0
margin_bottom = 732.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paysLabel" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 1214.0
margin_right = 355.0
margin_bottom = 1284.0
custom_fonts/font = SubResource( 2 )
text = "Pays:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choix pays" type="OptionButton" parent="formule"]
margin_left = 125.0
margin_top = 1311.0
margin_right = 1375.0
margin_bottom = 1383.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Selectioner un pays"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwdLabel" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 782.0
margin_right = 404.0
margin_bottom = 852.0
custom_fonts/font = SubResource( 2 )
text = "Mot de passe:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwd" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 877.0
margin_right = 1375.0
margin_bottom = 949.0
custom_fonts/font = SubResource( 3 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwdconfLabel" type="Label" parent="formule"]
margin_left = 125.0
margin_top = 997.0
margin_right = 638.0
margin_bottom = 1067.0
custom_fonts/font = SubResource( 2 )
text = "Confirmer Mot de passe:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwdconf" type="LineEdit" parent="formule"]
margin_left = 125.0
margin_top = 1092.0
margin_right = 1375.0
margin_bottom = 1164.0
custom_fonts/font = SubResource( 3 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="TextureButton" parent="formule"]
margin_left = 150.0
margin_top = 1460.0
margin_right = 340.0
margin_bottom = 1520.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_mdp" type="Label" parent="formule"]
visible = false
margin_left = 1420.0
margin_top = 863.135
margin_right = 2037.0
margin_bottom = 955.135
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.941176, 0.0235294, 0.0235294, 1 )
text = "mot de passe non identique"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_username" type="Label" parent="formule"]
visible = false
margin_left = 1420.0
margin_top = 649.561
margin_right = 2037.0
margin_bottom = 741.561
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.941176, 0.0235294, 0.0235294, 1 )
text = "username déjà utilisé !"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_mail" type="Label" parent="formule"]
visible = false
margin_left = 1420.0
margin_top = 446.666
margin_right = 2037.0
margin_bottom = 538.666
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.941176, 0.0235294, 0.0235294, 1 )
text = "mot de passe non identique !"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retour" type="TextureButton" parent="."]
margin_left = 1950.0
margin_top = 1460.0
margin_right = 2140.0
margin_bottom = 1520.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="PopupDialog" parent="."]
margin_left = 1253.98
margin_top = 103.491
margin_right = 2555.98
margin_bottom = 1878.49
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="error"]
margin_left = 171.0
margin_top = 178.0
margin_right = 1138.0
margin_bottom = 1099.0
custom_fonts/normal_font = SubResource( 8 )
text = "Erreur d'inscription... Email ou pseudo déjà utilisé"

[node name="TextureButton" type="TextureButton" parent="error"]
margin_left = 374.599
margin_top = 1229.87
margin_right = 564.599
margin_bottom = 1289.87
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="success" type="PopupDialog" parent="."]
margin_left = 1253.98
margin_top = 103.491
margin_right = 2555.98
margin_bottom = 1878.49
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="success"]
margin_left = 171.0
margin_top = 189.0
margin_right = 1138.0
margin_bottom = 1099.0
custom_fonts/normal_font = SubResource( 8 )
text = "Inscription confirmé"

[node name="retour_success" type="TextureButton" parent="success"]
margin_left = 374.599
margin_top = 1229.87
margin_right = 564.599
margin_bottom = 1289.87
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="formule/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="error/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="success/retour_success" to="." method="_on_retour_success_pressed"]
